Fix hash tag offscreen on mobile

--- a/app/styles/components/_app.scss
+++ b/app/styles/components/_app.scss
@@ -191,7 +191,6 @@ h6 {
 
 .io__hash {
   margin: 40px auto;
-  margin-left: -$hashWidth / 2;
   height: 120px;
   background: url(../images/io15-hash-on-white.png) no-repeat 50% 50%;
   background-size: contain;
